output_10.1.168/blas_magma.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/blas_magma.h-d35260.hip.

[HIPIFY] info: file './quda/include/blas_magma.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 4
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 55
  TOTAL bytes: 2315
  CHANGED lines of code: 3
  TOTAL lines of code: 66
  CODE CHANGED (in bytes) %: 2
  CODE CHANGED (in lines) %: 5
  TIME ELAPSED s: 0.51
[HIPIFY] info: CONVERTED refs by type:
  include_cuda_main_header: 3
  type: 1
[HIPIFY] info: CONVERTED refs by API:
  CUDA Driver API: 1
  CUDA RT API: 1
  cuComplex API: 2
[HIPIFY] info: CONVERTED refs by names:
  cuComplex: 1
  cuComplex.h: 1
  cuda.h: 1
  cuda_runtime.h: 1
